--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "carbon-components": "^7.19.0",
     "jquery": "^3.2.1",
     "moment": "^2.18.1",
     "react": "^15.6.1",
