--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^15.6.1",
     "react-big-calendar": "^0.14.4",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-sticky": "^6.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
