--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "carbon-components": "^7.19.0",
     "jquery": "^3.2.1",
+    "material-design-icons": "^3.0.1",
+    "material-ui": "^1.0.0-beta.4",
     "moment": "^2.18.1",
     "react": "^15.6.1",
     "react-big-calendar": "^0.14.4",
