--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.6.1",
     "react-big-calendar": "^0.14.4",
     "react-dom": "^15.6.1",
+    "react-hint": "^1.3.1",
     "react-scripts": "1.0.10",
     "react-sticky": "^6.0.1"
   },
