--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^15.6.1",
     "react-hint": "^1.3.1",
     "react-scripts": "1.0.10",
-    "react-sticky": "^6.0.1"
+    "react-sticky": "^6.0.1",
+    "react-tooltip": "^3.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
