--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-big-calendar": "^0.14.4",
     "react-dom": "^15.6.1",
     "react-hint": "^1.3.1",
+    "react-md-spinner": "^0.2.5",
     "react-scripts": "1.0.10",
     "react-sticky": "^6.0.1",
     "react-tooltip": "^3.3.0"
