--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "carbon-components": "^7.19.0",
+    "immutable": "^3.8.1",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
     "material-ui": "^1.0.0-beta.4",
@@ -13,9 +14,12 @@
     "react-dom": "^15.6.1",
     "react-hint": "^1.3.1",
     "react-md-spinner": "^0.2.5",
+    "react-redux": "^5.0.6",
     "react-scripts": "1.0.10",
     "react-sticky": "^6.0.1",
-    "react-tooltip": "^3.3.0"
+    "react-tooltip": "^3.3.0",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
