--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
     "carbon-components": "^7.19.0",
+    "history": "^4.7.2",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
     "material-design-icons": "^3.0.1",
@@ -15,6 +17,7 @@
     "react-hint": "^1.3.1",
     "react-md-spinner": "^0.2.5",
     "react-redux": "^5.0.6",
+    "react-router-redux": "next",
     "react-scripts": "1.0.10",
     "react-sticky": "^6.0.1",
     "react-tooltip": "^3.3.0",
