--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "carbon-components": "^7.19.0",
+    "classnames": "^2.2.5",
     "history": "^4.7.2",
     "immutable": "^3.8.1",
     "jquery": "^3.2.1",
