--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "carbon-components": "^7.19.0",
-    "jquery": "^3.2.1",
-    "lodash": "^4.17.4",
+    "carbon-components": "^7.26.10",
+    "jquery": "^3.3.1",
+    "lodash": "^4.17.10",
     "material-design-icons": "^3.0.1",
-    "material-ui": "^1.0.0-beta.4",
-    "moment": "^2.18.1",
-    "react": "^15.6.1",
+    "material-ui": "^1.0.0-beta.46",
+    "moment": "^2.22.2",
+    "npm-check": "^5.8.0",
+    "react": "^16.4.2",
     "react-big-calendar": "^0.14.4",
-    "react-dom": "^15.6.1",
+    "react-dom": "^16.4.2",
     "react-hint": "^1.3.1",
     "react-md-spinner": "^0.2.5",
     "react-scripts": "1.0.10",
-    "react-sticky": "^6.0.1",
-    "react-tooltip": "^3.3.0"
+    "react-sticky": "^6.0.3",
+    "react-tooltip": "^3.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
